2012-03-06  Dirk Pranke  <dpranke@chromium.org>

        remove chromium_gpu ports
        https://bugs.webkit.org/show_bug.cgi?id=80345

        Reviewed by Ojan Vafai.

        This change leaves in the 'graphics_type' distinction in the
        test_expectations; removing that will require more updates and a
        pass over test_expectations.txt, so I'm separating that out.

        * Scripts/webkitpy/layout_tests/port/builders.py:
        * Scripts/webkitpy/layout_tests/port/chromium.py:
        (ChromiumPort):
        * Scripts/webkitpy/layout_tests/port/chromium_gpu.py: Removed.
        * Scripts/webkitpy/layout_tests/port/chromium_gpu_unittest.py: Removed.
        * Scripts/webkitpy/layout_tests/port/factory.py:
        (PortFactory):
        (PortFactory.get):
        * Scripts/webkitpy/layout_tests/port/factory_unittest.py:
        (FactoryTest.test_qt):
        * Scripts/webkitpy/tool/commands/rebaseline_unittest.py:
        (TestRebaseline.test_rebaseline_expectations):

2012-03-06  Raphael Kubo da Costa  <kubo@profusion.mobi>

        undefined reference to JSC::IdentifierTable::~IdentifierTable() on EFL port
        https://bugs.webkit.org/show_bug.cgi?id=80282

        Reviewed by Antonio Gomes.

        Remove transitive library dependencies; they are especially
        dangerous when one ends up linking against WTF, JSC and then WTF
        again, since some symbols will not be defined.

        Passing --no-copy-dt-needed-entries and --as-needed to the linker
        (which some recent Linux distros do by default) makes the issue
        even more evident.

        * DumpRenderTree/efl/CMakeLists.txt: Do not link directly to WTF,
        as the other libraries have the needed symbols. Explicitly link
        against fontconfig.

2012-03-06  Dean Jackson  <dino@apple.com>

        filter-build-webkit needs more filters
        https://bugs.webkit.org/show_bug.cgi?id=80440

        Reviewed by Joseph Pecoraro.
