@@ -1,5 +1,17 @@
 2012-03-06  Dirk Pranke  <dpranke@chromium.org>
 
+        test_start_cmd (webkitpy.layout_tests.servers.http_server_unittest.TestHttpServer) is broken
+        https://bugs.webkit.org/show_bug.cgi?id=80468
+
+        Unreviewed, build fix.
+
+        Fixing a bug revealed by r80443 when we fixed filesystem.copyfile().
+
+        * Scripts/webkitpy/layout_tests/servers/http_server.py:
+        (Lighttpd._prepare_config):
+
+2012-03-06  Dirk Pranke  <dpranke@chromium.org>
+
         remove chromium_gpu ports
         https://bugs.webkit.org/show_bug.cgi?id=80345
 
